# CRust-OS

./: .gdbinit  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  crust.cfg  crust.lds  domain_config  elfnote.S  init.rs  init_console.c  loader.S  rust_test.rs  x86_64-unknown-none-gnu.json  x86_64-unknown-xen.json
.cargo/: config
boot/: elfnote.S  start.S
include/: .console.h.swp  .events.h.swp  list.h
include/x86/x86_64/: .hypercall-x86_64.h.swp
include/xen/: .event_channel.h.swp
mm/: Cargo.toml
mm/src/: malloc.c  mm.rs
rust/: rlibc.rs  rust_test.rs  rustlib.rs
src/: console.rs  crust.rs  events.rs  hypercalls.rs  main.rs  sharedinfo.rs  shims.rs  startinfo.rs  traps.rs  xen.rs
src/arch/: mod.rs  shims.S  start.S
src/hypercalls/: console_io.rs  event_channel_op.rs  macros.rs  mod.rs  sched_op.rs
src/hypercalls/console_io/: mod.rs  xencons_ring.rs
src/hypercalls/event_channel_op/: alloc_unbound.rs  bind_interdomain.rs  bind_ipi.rs  bind_pirq.rs  bind_virq.rs  close.rs  mod.rs  send.rs
src/hypercalls/grant_table_op/: mod.rs  setup_table.rs
src/mm/: mod.rs
src/std/: error.rs  io.rs  macros.rs  mod.rs  ops.rs  sync.rs
src/std/io/: mod.rs
src/xen/: console.rs  emergency_console.rs  event_channels.rs  grant_tables.rs  mem.rs  mod.rs  sbrk.rs  start_info.rs  xenstore.rs
src/xen/arch/x86_64/: mem.rs  mod.rs  (+1 more)
src/xen/console_io/: mod.rs  xencons_ring.rs
src/xen/ffi/: console.rs  errno.rs  hypercalls.rs  mod.rs  shared_info.rs  start_info.rs  xenstore.rs
src/xen/hypercalls/: mod.rs
src/xen/ring_buffer/: mod.rs
(+16 files in other folders)
