[package]
name = "crust"
version = "0.1.0"
authors = ["Carl Patenaude-Poulin <carl.patenaudepoulin@mail.mcgill.ca>", "Scott Cooper <scott.cooper2@mail.mcgill.ca"]

[dependencies]
rlibc = "0.1"

[dependencies.mm]
path = "./mm"

[dependencies.alloc]
git = "https://github.com/phil-opp/nightly-liballoc.git"

[dependencies.rustc_unicode]
git = "https://github.com/phil-opp/nightly-librustc_unicode.git"

[dependencies.collections]
git = "https://github.com/phil-opp/nightly-libcollections.git"
